3.1.3
* AddonBrowser noh has button to hide Addons marked as Broken

3.1.2
* Fix for unwatched badge on home not fitting 4 digits numbers
* Fixed a bug showing wrong format for seasons in icon view
* support for music genres icons
* genre icons now are in extra addon pack
* back to square icons
* Fix for labels in banner view wrong color
* 1px white border on icons
* Iconview sliding info panel now is the same for addon content

3.1.1
* Fix for MPAA not showing correcty on Sio2 / Sio2x views
* Moved Skin version label to bottom fo home (z order)
* Cosmetics for Icons (no more dvd boxes) - Better view of Favourites on Shelf.
* all new default icons
* new (old) method for icon view (hell if they stealing it, i'm using it!!)
* minor stuff here and there

3.0.81 / 3.1.0
* Cosmetics on Video Info
* Fix for Iconview not being centered and getting cut off
* Borders on TvShows on shelf

3.0.80
* Cosmetics Here & There
* Support for Genre Specific Icons
* Added Danish (Rridder), French (Nerve) and Italian (Betty)
* Fix for DialogPVRGroupManager.xml - now working ;)
* Cosmetics on some PVR windows
* Infos in full screen renewed, now showing a list of the cast.
* Badge on Home screen indicating the number of TVShows airing today (on TV Guide Icon)
* New Alternative Font (unfortunately still incomplete)
* Testing System font pointing to XBMC native font (just realized is the same used in Skin)
* Music Videos on Shelf
* Drop support for NAVI-X
* New Trakt.tv windows
* fixes for biglist in music views

3.0.7
* <posx> completely removed from code now only <left>
* cosmetics on icons
* new badge for unwatched episodes count on home
* new badge for unwatched movies count on home
* Option to hide the aforementioned badges from home
* Option to hide infos in Icon view
* Option for Random Movies on Shelf

3.0.6 - 3.0.5
* Fix for Addon Browser not showing all the infos correctly
* Splash Screen
* Added the ability to play movie trailers from shelf (if links are scraped)