@@ -414,7 +414,7 @@
                                 <texture>$VAR[dvdbox]</texture>
                             </control>
                             <control type="group">
-                                <visible>!StringCompare(ListItem.Label,..)</visible>
+                                <visible>!StringCompare(ListItem.Label,..) + !Skin.HasSetting(noinfosicon)</visible>
                                 <animation effect="fade" start="0" end="100" delay="2000" time="300">Focus</animation>
                                 <control type="image">
                                     <centertop>231</centertop>
