@@ -54,7 +54,7 @@
                         <top>101</top>
                         <width>40</width>
                         <height>40</height>
-                        <texture>$VAR[WatchStatus,overlay/List/]</texture>
+                        <texture>$VAR[WatchStatus,overlay/]</texture>
                         <aspectratio>keep</aspectratio>
                     </control>
                     <control type="textbox">
@@ -115,7 +115,7 @@
                         <top>101</top>
                         <width>40</width>
                         <height>40</height>
-                        <texture>$VAR[WatchStatus,overlay/List/]</texture>
+                        <texture>$VAR[WatchStatus,overlay/]</texture>
                         <aspectratio>keep</aspectratio>
                     </control>
                     <control type="textbox">
