@@ -1,5 +1,6 @@
 3.1.3
 * AddonBrowser noh has button to hide Addons marked as Broken
+* Fix for unwatched overlay (Icons now show unwatched for show in progress)
 
 3.1.2
 * Fix for unwatched badge on home not fitting 4 digits numbers
